add user email prop, define @types and response data format, modify response logics
